--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,14 @@
 
     html {
       font-family: 'Russo One', sans-serif;
-      --playing-bg: #ee9228;
+      --playing-bg: #c49365;
       --playing-color: #fff;
-      --paused-bg: #c97962;
+      --paused-bg: #b9456a;
       --paused-color: #fff;
       --ended-bg: #230e2a;
       --ended-color: #fff;
+      --unstarted-bg: #8f1861;
+      --unstarted-color: #fff;
     }
     body {
       background: #000;
