--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Audioviz</title>
+  <title>Frequencies</title>
   <style>
     @import url('https://fonts.googleapis.com/css?family=Oxanium|Russo+One&display=swap');
 
@@ -32,6 +34,6 @@
   </style>
 </head>
 <body>
-  <script src="/application.js"></script>
+  <script src="application.js"></script>
 </body>
 </html>
