--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,28 @@
       --unstarted-bg: #8f1861;
       --unstarted-color: #fff;
     }
+    html, body {
+      height: 100%;
+    }
     body {
       background: #000;
       color: #fff;
       margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+    }
+    main {
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
+  <main></main>
   <script src="application.js"></script>
 </body>
 </html>
